--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,28 +23,18 @@ const { hijri, date, day } = getWaktuSolat(cityCode);
 	<div
 		class="py-10 nav grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 gap-5"
 	>
-		<div>
+		<!--	<div class="py-10 nav grid grid-cols-[20vw_minmax(60vw,_1fr)_80vw]">-->
+		<div class="bg-base-200 rounded-box p-10">
 			<h1 class="text-center text-xl font-bold">{city}</h1>
-			<hr class="hidden h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
-			<div class="hidden flex justify-evenly items-center">
-				<small>{hijri}, {date}, {day}</small>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					class="inline-block w-5 h-5 text-orange-300 stroke-current"
-					><path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						stroke-width="2"
-						d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-					></path></svg
-				>
+			<div class="flex justify-evenly items-center py-2">
+				<ul class="text-xs text-center py-10">
+					<li>{hijri}</li>
+					<li>{date}</li>
+					<li>{day}</li>
+				</ul>
+				<small class="hidden">{hijri}, {date}, {day}</small>
 			</div>
-			<hr class="hidden h-px my-2 bg-gray-200 border-0 dark:bg-gray-700" />
 		</div>
-		<div>
-			<PrayerTimeTable />
-		</div>
+		<PrayerTimeTable />
 	</div>
 </Layout>
