--- a/src/pages/[state]/[city].astro
+++ b/src/pages/[state]/[city].astro
@@ -32,10 +32,16 @@ const { hijri, date, day } = getWaktuSolat(city);
 	<div
 		class="py-10 nav grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 gap-5"
 	>
-		<div>
+		<!--	<div class="py-10 nav grid grid-cols-[20vw_minmax(60vw,_1fr)_80vw]">-->
+		<div class="bg-base-200 rounded-box p-10">
 			<h1 class="text-center text-xl font-bold">{location}</h1>
-			<div class="hidden flex justify-evenly items-center">
-				<small>{hijri}, {date}, {day}</small>
+			<div class="flex justify-evenly items-center">
+				<ul class="text-xs text-center py-10">
+					<li>{hijri}</li>
+					<li>{date}</li>
+					<li>{day}</li>
+				</ul>
+				<small class="hidden">{hijri}, {date}, {day}</small>
 			</div>
 		</div>
 		<div>
