--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -3,15 +3,15 @@ import SelectNegeri from "../components/SelectNegeri.astro";
 import SelectDaerah from "../components/SelectDaerah.astro";
 import Constants from "../constants";
 
-const { city, state } = Astro.props;
+const { cities, state } = Astro.props;
 const stateNew =
 		state ||
-		Constants.defaultSettings.waktuSolatState ||
-		"get state from localstorage",
-	cities =
-		city ||
-		Constants.defaultSettings.waktuSolatCityArray ||
-		"get waktusolat cities from localstorage";
+		//localStorage.getItem("state") ||
+		Constants.defaultSettings.waktuSolatState,
+	citiesNew =
+		cities ||
+		//localStorage.getItem("cities") ||
+		Constants.defaultSettings.waktuSolatCityArray;
 ---
 
 <main class="bg-base-100 sticky top-0 z-10">
@@ -36,7 +36,7 @@ const stateNew =
 			<div tabindex="0" class="collapse collapse-arrow">
 				<div class="collapse-title text-sm flex items-center"></div>
 				<div class="p-0 collapse-content overflow-y-auto">
-					<SelectDaerah state={stateNew} cities={cities} />
+					<SelectDaerah state={stateNew} cities={citiesNew} />
 				</div>
 			</div>
 		</div>
