--- a/src/components/PrayerTimeTable.astro
+++ b/src/components/PrayerTimeTable.astro
@@ -7,7 +7,7 @@ const closestTime = getClosestPrayerTime(filteredObject);
 ---
 
 <div class="overflow-x-auto">
- <table class="table text-center">
+ <table class="table">
   <thead>
    <tr>
     <th>Waktu</th>
