--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -5,7 +5,7 @@ const { city } = Astro.params;
 
 <div id="daerahList">
 	<div class="overflow-y-auto w-max">
-		<div class="stats shadow">
+		<div class="stats shadow py-2">
 			{
 				cities.map((el: any) => (
 					<div class="relative stat pt-0 pb-2 -ml-5">
