--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from "../layouts/Navigation.astro";
 import Footer from "../layouts/Footer.astro";
+import "../styles/tailwind.css";
 
 interface Props {
 	title: string;
