fix border on prayertimetable

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -16,8 +16,8 @@ const location = Astro.props.location
 const { hijri, date, day } = getWaktuSolat(cityCode);
 ---
 
-<div class="nav py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
-  <div class="bg-base-200 rounded-box p-8">
+<div class="nav py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+  <div class="p-8">
     <div class="flex pb-4">
       <ul class="text-xs text-gray-400">
         <li class="hidden">{hijri}</li>
@@ -27,6 +27,8 @@ const { hijri, date, day } = getWaktuSolat(cityCode);
     </div>
     <h3>{location}</h3>
   </div>
-  <PrayerTimeTable />
+  <div class="p-8 border rounded-box border-gray-700">
+    <PrayerTimeTable />
+  </div>
   <RandomTazkirah />
 </div>
