--- a/src/components/RandomTazkirah.astro
+++ b/src/components/RandomTazkirah.astro
@@ -2,9 +2,7 @@
 
 ---
 
-<div
-  class="p-8 text-sm leading-10 font-mono rounded-box border-dotted border-2 border-gray-600 text-gray-400"
->
+<div class="p-8 text-sm leading-10 font-mono text-gray-400">
   "Dan kalaulah (amal yang seberat zarrah) itu amal kebajikan, nescaya akan
   menggandakannya dan akan memberi, dari sisiNya, pahala yang amat besar" [Surah
   an-Nisa' 40]
