--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -20,8 +20,8 @@ const location = Astro.params.zone
 const { hijri, date, day } = getWaktuSolat(zone);
 ---
 
-<div class="nav py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-  <div class="p-8">
+<div class="nav py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
+  <div class="p-4 bg-base-200 border rounded-box border-gray-700">
     <div class="flex pb-4">
       <ul class="text-xs text-gray-400">
         <li class="hidden">{hijri}</li>
@@ -31,8 +31,10 @@ const { hijri, date, day } = getWaktuSolat(zone);
     </div>
     <h3>{location}</h3>
   </div>
-  <div class="p-8 border rounded-box border-gray-700">
+  <div class="p-4 border rounded-box border-gray-700">
     <PrayerTimeTable />
   </div>
-  <RandomTazkirah />
+  <div class="p-4 border rounded-box border-gray-700">
+    <RandomTazkirah />
+  </div>
 </div>
