--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -6,7 +6,7 @@ import Constants from "../constants";
 const states =
 		Astro.props.state ||
 		//localStorage.getItem("state") ||
-		Constants.defaultSettings.waktuSolatState,
+		Constants.defaultSettings.state,
 	zones =
 		Astro.props.zones ||
 		//localStorage.getItem("cities") ||
