--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Constants from "../constants";
 
 const state =
 		//localStorage.getItem("state") ||
-		Constants.defaultSettings.waktuSolatState,
+		Constants.defaultSettings.state,
 	zones =
 		//localStorage.getItem("cities") ||
 		Constants.defaultSettings.waktuSolatZones;
