--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -7,7 +7,7 @@
 
 	const zone = getZoneFromURL();
 	async function getPrayerTimeByZone() {
-		return await import(`../prayertimes/2024/${zone}.json`); // return await import("../prayertimes/2024/JHR01.json");
+		return await import(`../prayertimes/2024/${zone}.json`);
 	}
 
 	async function getPrayerTimeDatas() {
