add twitter love

--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -38,7 +38,7 @@ const states =
 					? "collapse collapse-arrow hidden2"
 					: "collapse collapse-arrow"}
 			>
-				<div class="collapse-title text-sm flex items-center"></div>
+				<input type="checkbox" />
 				<div class="p-0 collapse-content overflow-y-auto">
 					<SelectDaerah states={states} zones={zones} />
 				</div>
