--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -2,6 +2,7 @@
 import Constants from "../constants";
 const { states, zones } = Astro.props;
 const { zone } = Astro.params;
+import "../style/animation.scss";
 
 const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 ---
@@ -12,33 +13,28 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 			{
 				zones.map((zone: any) => (
 					<div class="relative stat pt-0 pb-2 -ml-5">
-						<div class="stat-figure text-gray-400">
+						<div class="stat-figure text-gray-400 bg-base-300">
 							<a
 								href="#"
-								class="selected absolute top-0 left-5"
+								class="absolute bottom-0 right-4 z-50"
 								title={"Set " + zone[0] + " as default location"}
 							>
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									fill="none"
-									viewBox="0 0 24 24"
-									class="inline-block w-5 h-5 stroke-current"
+								<input id={"toggle-heart_" + zone[0]} type="checkbox" />
+								<label
+									for={"toggle-heart_" + zone[0]}
+									aria-label="like"
+									class="inline-block w-2 h-2 stroke-current"
 								>
-									<path
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										stroke-width="2"
-										d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-									/>
-								</svg>
+									<span class="text-xl">❤</span>
+								</label>{" "}
 							</a>
 						</div>
 						<a href={"/" + states + "/" + zone[0]}>
 							<div
 								class={
 									zone.indexOf(zoneParam) == 0
-										? "ml-6 mb-2 stat-title text-white"
-										: "ml-6 mb-2 stat-title text-gray-400"
+										? "mb-2 stat-title text-white"
+										: "mb-2 stat-title text-gray-400"
 								}
 							>
 								{zone[0]}
