fix scroll on love burst

--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -9,7 +9,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 
 <div id="daerahList">
 	<div class="overflow-y-auto w-max">
-		<div class="stats shadow py-2">
+		<div class="stats shadow py-2 overflow-hidden">
 			{
 				zones.map((zone: any) => (
 					<div class="relative stat pt-0 pb-2 -ml-5">
