--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -25,7 +25,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 									aria-label="like"
 									class="inline-block w-2 h-2 stroke-current"
 								>
-									<span class="text-xl">❤</span>
+									<span class="text-xl">♥</span>
 								</label>{" "}
 							</a>
 						</div>
