--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -16,7 +16,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 						<div class="stat-figure text-gray-400 bg-base-300">
 							<a
 								href="#"
-								class="absolute bottom-0 right-4 z-50"
+								class="absolute -top-4 right-1/2 z-50"
 								title={"Set " + zone[0] + " as default location"}
 							>
 								<input id={"toggle-heart_" + zone[0]} type="checkbox" />
