repair heart icon selectdaerah v3

--- a/src/style/animation.scss
+++ b/src/style/animation.scss
@@ -83,7 +83,7 @@ input[id^="toggle-heart_"] {
   align-self: center;
   position: relative;
   color: #888;
-  font-size: 2em;
+  //font-size: 2em;
   filter: grayscale(1);
   user-select: none;
   cursor: pointer;
